fixed validation